--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "JOSE BALCAZAR",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
